--- a/views/index.hbs
+++ b/views/index.hbs
@@ -7,7 +7,10 @@
         <form class="form-inline" action="/users/search/" method="post">
             <div style="margin: 24px auto;">
                 <input type="text" name="id" style="width:300px;"class="form-control" placeholder="search for players by gamertag">
-                <input type="submit" value="Search for players">
+                <br>
+                <input type="text" name="team" style="width:300px;"class="form-control" placeholder="search on team">
+                <br>
+                <input type="submit" value="Search for player on team">
             </div>
 
         </form>
