--- a/views/teampage.hbs
+++ b/views/teampage.hbs
@@ -9,13 +9,13 @@
              <th>Nationality</th>
          </tr>
          <tr>
-             <td>{{gamertag}} </td>
-             <td> {{firstname}}</td>
-             <td> {{lastname}} </td>
-             <td> {{Nationality}}</td>
+             <td>{{plyr0.gamertag}} </td>
+             <td> {{plyr0.firstname}} </td>
+             <td> {{plyr0.lastname}} </td>
+             <td> {{plyr0.Nationality}} </td>
         </tr>
         <tr>
-            <td> </td>
+            <td> {{plyr1.gamertag}} </td>
             <td> </td>
             <td> </td>
             <td> </td>
