--- a/views/player.hbs
+++ b/views/player.hbs
@@ -1,3 +1,3 @@
 <h1>{{player.gamertag}}</h1>
-<h2>{{player.gamertagfirstname}} {{player.gamertaglastname}}</h2>
-<h3>{{player.gamertagTeam}} {{player.gamertagNationality}}</h3>
+<h2>{{player.firstname}} {{player.lastname}}</h2>
+<h3>{{player.team}} {{player.Nationality}}</h3>
